add total tickets from every account

--- a/src/app/Feature/Clients/clients-tickets-view.component.html
+++ b/src/app/Feature/Clients/clients-tickets-view.component.html
@@ -14,7 +14,7 @@
       </button>
       <div class="stat-badge">
         <span class="stat-label">Total Tickets</span>
-        <span class="stat-value">{{ tickets().length }}</span>
+        <span class="stat-value">{{ totalTickets() }}</span>
       </div>
     </div>
   </div>
@@ -28,7 +28,7 @@
     <button class="tab-btn" [class.active]="activeTab() === 'list'" (click)="switchTab('list')">
       <mat-icon>list</mat-icon>
       My Tickets
-      <span class="badge" *ngIf="tickets().length > 0">{{ tickets().length }}</span>
+      <!-- <span class="badge" *ngIf="tickets().length > 0">{{ tickets().length }}</span> -->
     </button>
   </div>
 
