--- a/src/app/Feature/Clients/components/AccountSites/account-sites.component.html
+++ b/src/app/Feature/Clients/components/AccountSites/account-sites.component.html
@@ -80,9 +80,9 @@
                   >
                     {{ getStatusLabel(ticket.status) }}
                   </span>
-                  <span class="severity-badge" [style.color]="getSeverityColor(ticket.severity)">
+                  <!-- <span class="severity-badge" [style.color]="getSeverityColor(ticket.severity)">
                     {{ getSeverityLabel(ticket.severity) }}
-                  </span>
+                  </span> -->
                 </div>
               </div>
               <h5 class="ticket-subject">{{ ticket.subject }}</h5>
