--- a/src/app/Core/layout/footer/footer.html
+++ b/src/app/Core/layout/footer/footer.html
@@ -3,20 +3,20 @@
     <div class="footer-content">
       <div class="footer-section">
         <div class="brand-footer">
-          <div class="logo">NT</div>
+          <div class="logo p-4">NTX</div>
           <p>NileTronix CRM</p>
         </div>
         <p class="description">Enterprise Customer Relationship Management System</p>
       </div>
 
-      <div class="footer-section">
+      <!-- <div class="footer-section">
         <h4>Quick Links</h4>
         <nav class="footer-nav">
           <a href="#">Dashboard</a>
           <a href="#">Support</a>
           <a href="#">Documentation</a>
         </nav>
-      </div>
+      </div> -->
 
       <div class="footer-section">
         <h4>Contact</h4>
